FrostWire 2.1.9 build 623 - FEB/05/2020
 - New jlibtorrent 1.2.3
 - libtorrent 1.2.3.0
 - boost 1.72.0 build
 - openssl 1.1.1d
 - Android NDK 21
 - UX: No more annoying ever-present Android notification, only during active transfers or music playback
 - UX: Torrent search results now show how old they are
 - EngineService and MusicPlaybackService are no longer ran as foreground services following newer android guidelines
 - Considerable CPU usage reduction through thread invocation throttling frees resources for better search and download experience
 - Removed experimental haptic feedback feature
 - Multiple crashes fixed
 - Music player and notifications framework update
 - MusicPlaybackService lifecycle rewrite
 - SoundCloud search/downloads fixed
 - LimeTorrents search/downloads fixed
 - android material 1.2.0-alpha04
 - androix browser 1.3.0-alpha01
 - applovin and mopub mediation 9.11.1
 - lt:fix erroneous event=completed tracker announce when checking files
 - lt:promote errors in parsing listen_interfaces to post listen_failed_alert
 - lt:fix bug in protocol encryption/obfuscation
 - lt:fix buffer overflow in SOCKS5 UDP logic
 - lt:fix issue of rapid calls to file_priority() clobbering each other
 - lt:clear tracker errors on success
 - lt:optimize setting with unlimited unchoke slots
 - lt:fixed restoring of trackers, comment, creation date and created-by in resume data
 - lt:fix handling of torrents with too large pieces
 - lt:fixed division by zero in anti-leech choker
 - lt:fixed bug in torrent_info::swap
  
FrostWire 2.1.8 build 610 - DEC/25/2019
 - TPB picks fastest mirror available
 - SoundCloud search/downloads fixed
 - Ads can be temporarily removed by playing a rewarded video ad
 - androidx.browser:browser:1.2.0-rc01 update
 - androidx.exifinterface:exifinterface:1.1.0 update
 - com.applovin:applovin-sdk:9.10.5 update
 - com.unity3d.ads:unity-ads:3.4.0 new
 - com.android.billingclient:billing:2.1.0 update